Fix urgent fix for parser game json + play assistant card action